Mentioned blog and usage of Prooph

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 <span>Location     Europe-Based, Digital Nomad               |    Testing      [###################################---]</span>
 <span>Education    Master degree of Computer Science (2011)  |    Linux        [################################------]</span>
 <span>                                                       |    DDD          [##########################------------]</span>
-<span>Email        <a href="mailto:gildas.quemener@gmail.com">gildas.quemener@gmail.com</a>                 |    React.js     [###############-----------------------]</span>
-<span>Telegram     <a href="https://telegram.me/GildasQ">https://telegram.me/GildasQ</a>               |</span>
-<span>Github       <a href="https://github.com/gquemener">https://github.com/gquemener</a>              |    Français     [######################################]</span>
-<span>Twitter      <a href="https://twitter.com/GildasQ">https://twitter.com/GildasQ</a>               |    English      [#####################################-]</span>
-<span>                                                       |    Español      [#############-------------------------]</span>
+<span>Email        <a target="_blank" href="mailto:gildas.quemener@gmail.com">gildas.quemener@gmail.com</a>                 |    React.js     [###############-----------------------]</span>
+<span>Telegram     <a target="_blank" href="https://telegram.me/GildasQ">https://telegram.me/GildasQ</a>               |</span>
+<span>Github       <a target="_blank" href="https://github.com/gquemener">https://github.com/gquemener</a>              |    Français     [######################################]</span>
+<span>Twitter      <a target="_blank" href="https://twitter.com/GildasQ">https://twitter.com/GildasQ</a>               |    English      [#####################################-]</span>
+<span>Blog         <a target="_blank" href="https://medium.com/@GildasQ">https://medium.com/@GildasQ</a>               |    Español      [#############-------------------------]</span>
 <span>                                                       |    Deutsch      [######--------------------------------]</span>
 <span></span>
 <span>                                                     *****</span>
@@ -48,8 +48,9 @@
 <span></span>
 <span>Experimenting, learning  on different subjects:</span>
 <span></span>
-<span>  - Frontend performance: building <a href="http://codehskar.com">a website</a> allowing to perform monkey test to detect</span>
-<span>                          unexpected bugs.</span>
+<span>  - Frontend performance: building a website allowing to perform a monkey test to detect unexpected behaviors on a website.</span>
+<span>                          Used <a target="_blank" href="http://getprooph.org">the Prooph components</a> to implement Event Sourcing and CQRS in order to keep track
+<span>                          of the performed actions.</span>
 <span></span>
 <span>  - Machine Learning: Learning about a few classification and regression algorithms (Naive Bayes, Support Vector</span>
 <span>                      Machine, Decision Tree, Simple Linear Regression, ...), along with the Python sklearn</span>
@@ -79,11 +80,11 @@
 <span></span>
 <span>Creation of a card game website generator (Pokemon, Magic, Game of Thrones, ...).</span>
 <span></span>
-<span>The architecture gravitated around the <a href="https://www.akeneo.com">Akeneo OSS PIM</a> which allowed us to import card</span>
+<span>The architecture gravitated around the <a target="_blank" href="https://www.akeneo.com">Akeneo OSS PIM</a> which allowed us to import card</span>
 <span>data in many different formats (api, proprietary xml, ...), enrich them (with translations, images,</span>
 <span>relationships, ...) and export them into a MongoDB database.</span>
 <span></span>
-<span>A Rest API, provided by <a href="http://python-eve.org/">Eve</a>, on top of this MongoDB allowed an Angular4 application to</span>
+<span>A Rest API, provided by <a target="_blank" href="http://python-eve.org/">Eve</a>, on top of this MongoDB allowed an Angular4 application to</span>
 <span>provide many card game associated features to end users.</span>
 <span></span>
 <span>                                                     -----</span>
@@ -91,7 +92,7 @@
 <span><i>Sep. 2014 - Jan. 2017</i> | EdGi Technology - CTO / Co-founder of the 1001ciné SVOD platform</span>
 <span><b>Tech Stack</b> Symfony 2.8 / Doctrine / angular.js / MySQL / Socket.io / Stripe</span>
 <span></span>
-<span>The <a href="https://1001cine.fr">1001ciné</a> platform is a Short-Movie SVOD website allowing passionate viewers to access,</span>
+<span>The <a target="_blank" href="https://1001cine.fr">1001ciné</a> platform is a Short-Movie SVOD website allowing passionate viewers to access,</span>
 <span>without limitation, a 100+ movies catalog.</span>
 <span></span>
 <span>Development of automation tools in PHP to upload, transcode and provide movies on the platform.</span>
@@ -105,7 +106,7 @@
 <span></span>
 <span>Early member of the Akeneo team.</span>
 <span></span>
-<span>Development of core features provided in the <a href="http://github.com/akeneo/pim-community-dev">community (OSS)</a> or the enterprise edition.</span>
+<span>Development of core features provided in the <a target="_blank" href="http://github.com/akeneo/pim-community-dev">community (OSS)</a> or the enterprise edition.</span>
 <span>I have taken part in technical discussions, leading to choices, being tools, methods or design patterns, approved</span>
 <span>by a majority.</span>
 <span>I have advocated in favor of Behaviour Driven Development and tools like Behat/PhpSpec, in order to bring our</span>
@@ -115,7 +116,7 @@
 <span>Hobbies</span>
 <span>-------</span>
 <span>  - Traveling the world</span>
-<span>  - <a href="https://regexper.com/#^(?:Wind)?[Ss]urfing$">/^(?:Wind)?[Ss]urfing$/</a></span>
+<span>  - <a target="_blank" href="https://regexper.com/#^(?:Wind)?[Ss]urfing$">/^(?:Wind)?[Ss]urfing$/</a></span>
 <span>  - Hiking moutains/jungles/pristine places</span>
 <span>  - Cinema / Series</span>
 </pre>
