--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <span>Location     Europe-Based, Digital Nomad               |    Testing      [###################################---]</span>
 <span>Education    Master degree of Computer Science (2011)  |    Linux        [################################------]</span>
 <span>                                                       |    DDD          [##########################------------]</span>
-<span>Email        <a target="_blank" href="mailto:gildas.quemener@gmail.com">gildas.quemener@gmail.com</a>                 |    React.js     [###############-----------------------]</span>
+<span>Email        <a target="_blank" href="mailto:hello@gildasquemener.me">hello@gildasquemener.me</a>                   |    React.js     [###############-----------------------]</span>
 <span>Telegram     <a target="_blank" href="https://telegram.me/GildasQ">https://telegram.me/GildasQ</a>               |</span>
 <span>Github       <a target="_blank" href="https://github.com/gquemener">https://github.com/gquemener</a>              |    Français     [######################################]</span>
 <span>Twitter      <a target="_blank" href="https://twitter.com/GildasQ">https://twitter.com/GildasQ</a>               |    English      [#####################################-]</span>
