--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <span></span>
 <span>Latest OSS contributions</span>
 <span>------------------------</span>
-<span>  * symfony/symfony                    #27241   <a href="https://github.com/symfony/symfony/issues/27241" target="_blank">Reject requests exceeding a size limit</a>                                     OPEN</span>
+<span>  * symfony/symfony                    #27241   <a href="https://github.com/symfony/symfony/issues/27241" target="_blank">Reject requests exceeding a size limit</a>                                   CLOSED</span>
 <span>  * symfony/recipes                    #405     <a href="https://github.com/symfony/recipes/pull/405" target="_blank">Described EasyLog Handler activation after install</a>                         OPEN</span>
 <span>  * phpactor/class-mover               #4       <a href="https://github.com/phpactor/class-mover/pull/4" target="_blank">Typo fixing in the documentation</a>                                          MERGED</span>
 <span>  * gquemener/composer-autoload-fixer   #3       <a href="https://github.com/gquemener/composer-autoload-fixer/pull/3" target="_blank">Converting the project into a composer plugin</a>                            MERGED</span>
