Added OSS contrib

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 <span></span>
 <span>Latest OSS contributions</span>
 <span>------------------------</span>
+<span>  * gquemener/behat-analysis-extension #4       <a href="https://github.com/gquemener/behat-analysis-extension/pull/4" target="_blank">Initiated the Behat3 extension</a>                                             OPEN</span>
 <span>  * symfony/symfony                    #27241   <a href="https://github.com/symfony/symfony/issues/27241" target="_blank">Reject requests exceeding a size limit</a>                                   CLOSED</span>
 <span>  * symfony/recipes                    #405     <a href="https://github.com/symfony/recipes/pull/405" target="_blank">Described EasyLog Handler activation after install</a>                         OPEN</span>
 <span>  * phpactor/class-mover               #4       <a href="https://github.com/phpactor/class-mover/pull/4" target="_blank">Typo fixing in the documentation</a>                                          MERGED</span>
