--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <span>  * EventSaucePHP/EventSauce           #42      <a href="https://github.com/EventSaucePHP/EventSauce/pull/42" target="_blank">Implementation of an EventSerializer decorator that checks type hints</a>    MERGED</span>
 <span>  * prolic/awesomeness                 #2       <a href="https://github.com/prolic/awesomeness/pull/2" target="_blank">Fixing a few bugs while introducing a Postgres event store example bug</a>   MERGED</span>
 <span>  * symfony/flex                        #341     <a href="https://github.com/symfony/flex/pull/341" target="_blank">Fixed wrong return type in the CopyFromPackageConfigurator class</a>          MERGED</span>
-<span>  * symfony/recipes-contrib            #320     <a href="https://github.com/symfony/recipes-contrib/pull/320" target="_blank">Added recipe for the Prooph pack</a>                                         OPENED</span>
+<span>  * symfony/recipes-contrib            #320     <a href="https://github.com/symfony/recipes-contrib/pull/320" target="_blank">Added recipe for the Prooph pack</a>                                           OPEN</span>
 <span></span>
 <span></span>
 <span>Hobbies</span>
