--- a/index.html
+++ b/index.html
@@ -115,16 +115,17 @@
 <span></span>
 <span>Latest OSS contributions</span>
 <span>------------------------</span>
+<span>  * prooph/service-bus                 #188     <a href="https://github.com/prooph/service-bus/pull/188" target="_blank">Implemented a PSR-16 cache plugin for the QueryBus</a>                         OPEN</span>
 <span>  * gquemener/behat-analysis-extension #4       <a href="https://github.com/gquemener/behat-analysis-extension/pull/4" target="_blank">Initiated the Behat3 extension</a>                                             OPEN</span>
-<span>  * symfony/symfony                    #27241   <a href="https://github.com/symfony/symfony/issues/27241" target="_blank">Reject requests exceeding a size limit</a>                                   CLOSED</span>
 <span>  * symfony/recipes                    #405     <a href="https://github.com/symfony/recipes/pull/405" target="_blank">Described EasyLog Handler activation after install</a>                         OPEN</span>
+<span>  * symfony/recipes-contrib            #320     <a href="https://github.com/symfony/recipes-contrib/pull/320" target="_blank">Added recipe for the Prooph pack</a>                                           OPEN</span>
+<span>  * symfony/symfony                    #27241   <a href="https://github.com/symfony/symfony/issues/27241" target="_blank">Reject requests exceeding a size limit</a>                                   CLOSED</span>
 <span>  * phpactor/class-mover               #4       <a href="https://github.com/phpactor/class-mover/pull/4" target="_blank">Typo fixing in the documentation</a>                                          MERGED</span>
 <span>  * gquemener/composer-autoload-fixer   #3       <a href="https://github.com/gquemener/composer-autoload-fixer/pull/3" target="_blank">Converting the project into a composer plugin</a>                            MERGED</span>
 <span>  * prolic/awesomeness                 #5       <a href="https://github.com/prolic/awesomeness/pull/5" target="_blank">Implementation of the PDO integration tests suite</a>                        MERGED</span>
 <span>  * EventSaucePHP/EventSauce           #42      <a href="https://github.com/EventSaucePHP/EventSauce/pull/42" target="_blank">Implementation of an EventSerializer decorator that checks type hints</a>    MERGED</span>
 <span>  * prolic/awesomeness                 #2       <a href="https://github.com/prolic/awesomeness/pull/2" target="_blank">Fixing a few bugs while introducing a Postgres event store example bug</a>   MERGED</span>
 <span>  * symfony/flex                        #341     <a href="https://github.com/symfony/flex/pull/341" target="_blank">Fixed wrong return type in the CopyFromPackageConfigurator class</a>          MERGED</span>
-<span>  * symfony/recipes-contrib            #320     <a href="https://github.com/symfony/recipes-contrib/pull/320" target="_blank">Added recipe for the Prooph pack</a>                                           OPEN</span>
 <span></span>
 <span></span>
 <span>Hobbies</span>
