Closed the 1001ciné project

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <span><i>Sep. 2014 - Mar. 2018</i> | EdGi Technology - CTO / Co-founder of the 1001ciné SVOD platform</span>
 <span><b>Tech Stack</b> Symfony 2.8 / Doctrine / angular.js / MySQL / Socket.io / Stripe</span>
 <span></span>
-<span>The <a target="_blank" href="https://1001cine.fr">1001ciné</a> platform is a Short-Movie SVOD website allowing passionate viewers to access,</span>
+<span>The 1001ciné platform was a Short-Movie SVOD website allowing passionate viewers to access,</span>
 <span>without limitation, a 100+ movies catalog.</span>
 <span></span>
 <span>Development of automation tools in PHP to upload, transcode and provide movies on the platform.</span>
