--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 <span></span>
 <span>Latest OSS contributions</span>
 <span>------------------------</span>
+<span>  * MERGED   prolic/fpp                         #60      <a href="https://github.com/prolic/fpp/pull/60" target="_blank">Added support for the "marker" keyword</a></span>
 <span>  * OPEN     prolic/fpp                         #58      <a href="https://github.com/prolic/fpp/pull/58" target="_blank">Define domain exceptions and use them inside constructor conditions</a></span>
-<span>  * OPEN     prolic/fpp                         #60      <a href="https://github.com/prolic/fpp/pull/60" target="_blank">Added support for the "marker" keyword</a></span>
-<span>  * OPEN     prooph/service-bus                 #188     <a href="https://github.com/prooph/service-bus/pull/188" target="_blank">Implemented a PSR-16 cache plugin for the QueryBus</a></span>
+<span>  * CLOSED   prooph/service-bus                 #188     <a href="https://github.com/prooph/service-bus/pull/188" target="_blank">Implemented a PSR-16 cache plugin for the QueryBus</a></span>
 <span>  * OPEN     gquemener/behat-analysis-extension #4       <a href="https://github.com/gquemener/behat-analysis-extension/pull/4" target="_blank">Initiated the Behat3 extension</a></span>
 <span>  * OPEN     symfony/recipes                    #405     <a href="https://github.com/symfony/recipes/pull/405" target="_blank">Described EasyLog Handler activation after install</a></span>
 <span>  * OPEN     symfony/recipes-contrib            #320     <a href="https://github.com/symfony/recipes-contrib/pull/320" target="_blank">Added recipe for the Prooph pack</a></span>
