--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 <span></span>
 <span>Latest OSS contributions</span>
 <span>------------------------</span>
+<span>  * OPEN     jakzal/injector                    #4       <a href="https://github.com/jakzal/injector/pull/4" target="_blank">Add support for parent properties extraction</a></span>
 <span>  * MERGED   prolic/fpp                         #60      <a href="https://github.com/prolic/fpp/pull/60" target="_blank">Added support for the "marker" keyword</a></span>
 <span>  * OPEN     prolic/fpp                         #58      <a href="https://github.com/prolic/fpp/pull/58" target="_blank">Define domain exceptions and use them inside constructor conditions</a></span>
 <span>  * CLOSED   prooph/service-bus                 #188     <a href="https://github.com/prooph/service-bus/pull/188" target="_blank">Implemented a PSR-16 cache plugin for the QueryBus</a></span>
