--- a/index.html
+++ b/index.html
@@ -115,9 +115,13 @@
 <span></span>
 <span>Latest OSS contributions</span>
 <span>------------------------</span>
+<span>  * OPEN     prooph/service-bus-symfony-bundle  #75      <a href="https://github.com/prooph/service-bus-symfony-bundle/pull/75" target="_blank">PSR Logger plugin messages accuracy improvements</a></span>
 <span>  * OPEN     jakzal/injector                    #4       <a href="https://github.com/jakzal/injector/pull/4" target="_blank">Add support for parent properties extraction</a></span>
+<span>  * MERGED   prolic/fpp                         #71      <a href="https://github.com/prolic/fpp/pull/71" target="_blank">Fix enum dumping in the body of the equals method.</a></span>
+<span>  * MERGED   prolic/fpp                         #67      <a href="https://github.com/prolic/fpp/pull/67" target="_blank">Described how marker autoloading fails</a></span>
+<span>  * MERGED   prolic/fpp                         #63      <a href="https://github.com/prolic/fpp/pull/63" target="_blank">Fixed line offset</a></span>
 <span>  * MERGED   prolic/fpp                         #60      <a href="https://github.com/prolic/fpp/pull/60" target="_blank">Added support for the "marker" keyword</a></span>
-<span>  * OPEN     prolic/fpp                         #58      <a href="https://github.com/prolic/fpp/pull/58" target="_blank">Define domain exceptions and use them inside constructor conditions</a></span>
+<span>  * CLOSED   prolic/fpp                         #58      <a href="https://github.com/prolic/fpp/pull/58" target="_blank">Define domain exceptions and use them inside constructor conditions</a></span>
 <span>  * CLOSED   prooph/service-bus                 #188     <a href="https://github.com/prooph/service-bus/pull/188" target="_blank">Implemented a PSR-16 cache plugin for the QueryBus</a></span>
 <span>  * OPEN     gquemener/behat-analysis-extension #4       <a href="https://github.com/gquemener/behat-analysis-extension/pull/4" target="_blank">Initiated the Behat3 extension</a></span>
 <span>  * OPEN     symfony/recipes                    #405     <a href="https://github.com/symfony/recipes/pull/405" target="_blank">Described EasyLog Handler activation after install</a></span>
