--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <span>Latest OSS contributions</span>
 <span>------------------------</span>
 <span>  * OPEN     prooph/service-bus-symfony-bundle  #75      <a href="https://github.com/prooph/service-bus-symfony-bundle/pull/75" target="_blank">PSR Logger plugin messages accuracy improvements</a></span>
-<span>  * OPEN     jakzal/injector                    #4       <a href="https://github.com/jakzal/injector/pull/4" target="_blank">Add support for parent properties extraction</a></span>
+<span>  * MERGED   jakzal/injector                    #4       <a href="https://github.com/jakzal/injector/pull/4" target="_blank">Add support for parent properties extraction</a></span>
 <span>  * MERGED   prolic/fpp                         #71      <a href="https://github.com/prolic/fpp/pull/71" target="_blank">Fix enum dumping in the body of the equals method.</a></span>
 <span>  * MERGED   prolic/fpp                         #67      <a href="https://github.com/prolic/fpp/pull/67" target="_blank">Described how marker autoloading fails</a></span>
 <span>  * MERGED   prolic/fpp                         #63      <a href="https://github.com/prolic/fpp/pull/63" target="_blank">Fixed line offset</a></span>
