Updated OSS contrib

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 <span></span>
 <span>Latest OSS contributions</span>
 <span>------------------------</span>
+<span>  * OPEN     prolix/fpp                         #77      <a href="https://github.com/prolic/fpp/pull/77" target="_blank">Addition of `Exception` deriving</a></span>
 <span>  * OPEN     prooph/service-bus-symfony-bundle  #75      <a href="https://github.com/prooph/service-bus-symfony-bundle/pull/75" target="_blank">PSR Logger plugin messages accuracy improvements</a></span>
 <span>  * MERGED   jakzal/injector                    #4       <a href="https://github.com/jakzal/injector/pull/4" target="_blank">Add support for parent properties extraction</a></span>
 <span>  * MERGED   prolic/fpp                         #71      <a href="https://github.com/prolic/fpp/pull/71" target="_blank">Fix enum dumping in the body of the equals method.</a></span>
